added java activities for all layouts; no testing yet as I had to fix the manifest

--- a/DueNow/app/src/main/res/values/colors.xml
+++ b/DueNow/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorPrimaryDarkRed">#E53935</color>
     <color name="colorAccentRed">#F44336</color>
     <color name="colorAccentGreen">#4CAF50</color>
+    <color name="white">#FFFFFF</color>
 
 
 
