--- a/DueNow/app/src/main/res/layout/activity_main.xml
+++ b/DueNow/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<duenow.viewgroup.FlyOutContainer xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/menuToolbar"
+    <!--menu-->
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:background="@color/colorPrimaryGreen">
-        <ImageButton
-            android:layout_width="@dimen/icon_size"
-            android:layout_height="@dimen/icon_size"
-            android:layout_gravity="start"
-            android:background="@android:color/transparent"
-            android:src="@mipmap/ic_menu_white_24dp"/>
-    </android.support.v7.widget.Toolbar>
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <ListView
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/menuToolbar"
+            android:background="@color/colorPrimaryGreen"
+            android:layout_width="match_parent"
+            android:layout_height="190dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.pkmmte.view.CircularImageView
+                    android:id="@+id/profile_image"
+                    android:layout_marginTop="56dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:src="@mipmap/ic_launcher" />
+
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Full Name"
+                    android:textSize="@dimen/body2"
+                    android:textColor="@color/white"
+                    android:padding="5dp"/>
+
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email"
+                    android:textSize="@dimen/body1"
+                    android:textColor="@color/white"
+                    android:paddingLeft="5dp"
+                    android:paddingBottom="5dp"/>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+        <LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:orientation="vertical">
+			
+			<ListView
+                android:id="@+id/menu_item"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+
+			
+		</LinearLayout>
+            
+    </LinearLayout>
+
+
+    <!--main frame-->
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF"
+        android:orientation="vertical" >
 
-    </ListView>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:background="@color/colorPrimaryGreen">
 
-</LinearLayout>
+            <ImageButton
+                android:id="@+id/menuButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="left"
+                android:background="@android:color/transparent"
+                android:src="@mipmap/ic_menu_white_24dp"/>
+
+            <TextView
+                android:id="@+id/appTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tasks"
+                android:layout_marginLeft="@dimen/headerMargin"
+                android:textColor="#FFFFFF"
+                android:textSize="@dimen/display2" />
+        </android.support.v7.widget.Toolbar>
+
+       <FrameLayout
+           android:id="@+id/content_frame"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_weight="1">
+
+       </FrameLayout>
+    </LinearLayout>
+
+</duenow.viewgroup.FlyOutContainer>
