--- a/DueNow/app/src/main/res/layout/list_item.xml
+++ b/DueNow/app/src/main/res/layout/list_item.xml
@@ -11,6 +11,7 @@
         android:layout_weight="1"
         android:padding="16dp">
         <TextView
+            android:id="@+id/taskname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/headline"
