--- a/DueNow/app/src/main/res/values/dimens.xml
+++ b/DueNow/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively). -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+	<dimen name="double_margin">32dp</dimen>
 
     <dimen name="icon_size">56dp</dimen>
     <dimen name="textBox">65dp</dimen>
