--- a/DueNow/app/src/main/res/layout/layout_new_task.xml
+++ b/DueNow/app/src/main/res/layout/layout_new_task.xml
@@ -7,11 +7,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/newTaskToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:background="@color/colorPrimaryGreen"/>
+        <!--<android.support.v7.widget.Toolbar-->
+            <!--android:id="@+id/newTaskToolbar"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="56dp"-->
+            <!--android:background="@color/colorPrimaryGreen"/>-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,7 +44,8 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/textBox"
-                    android:textColorHint="#FFFFFF"
+                    android:textColorHint="@color/grey"
+                    android:textColor="@color/white"
                     android:textSize="@dimen/body2"
                     android:inputType="textMultiLine"
                     android:hint="Task Description"
