--- a/DueNow/app/src/main/res/layout/activity_main.xml
+++ b/DueNow/app/src/main/res/layout/activity_main.xml
@@ -50,120 +50,10 @@
 
         </android.support.v7.widget.Toolbar>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="@dimen/headerMargin"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_view_list_black_24dp"
-                    android:padding="@dimen/headerMargin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/subheading2"
-                    android:text="Tasks"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/headerMargin"
-                android:paddingRight="@dimen/headerMargin"
-                android:paddingBottom="@dimen/headerMargin"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_watch_later_black_24dp"
-                    android:padding="@dimen/headerMargin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/subheading2"
-                    android:text="Postponed Tasks"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/headerMargin"
-                android:paddingRight="@dimen/headerMargin"
-                android:paddingBottom="@dimen/headerMargin"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_check_black_24dp"
-                    android:padding="@dimen/headerMargin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/subheading2"
-                    android:text="Finished Tasks"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/headerMargin"
-                android:paddingRight="@dimen/headerMargin"
-                android:paddingBottom="@dimen/headerMargin"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_account_box_black_24dp"
-                    android:padding="@dimen/headerMargin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/subheading2"
-                    android:text="Account Settings"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingLeft="@dimen/headerMargin"
-                android:paddingRight="@dimen/headerMargin"
-                android:paddingBottom="@dimen/headerMargin"
-                android:orientation="horizontal">
-                <ImageView
-                    android:layout_width="@dimen/icon_size"
-                    android:layout_height="@dimen/icon_size"
-                    android:gravity="center"
-                    android:src="@mipmap/ic_exit_to_app_black_24dp"
-                    android:padding="@dimen/headerMargin"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/activity_vertical_margin"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/subheading2"
-                    android:text="Logout"/>
-            </LinearLayout>
-
-        </LinearLayout>
+        <ListView
+			android:id="@+id/menu"
+			android:layout_height="match_parent"
+			android:layout_width="match_parent"/>
 
     </LinearLayout>
 
@@ -204,13 +94,25 @@
                 android:textColor="#FFFFFF" />
         </android.support.v7.widget.Toolbar>
 
-       <FrameLayout
-           android:id="@+id/content_frame"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:layout_weight="1">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+               <FrameLayout
+                   android:id="@+id/content_frame"
+                   android:layout_width="match_parent"
+                   android:layout_height="match_parent">
 
-       </FrameLayout>
+               </FrameLayout>
+                <ImageButton
+                    android:layout_margin="15dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:src="@mipmap/ic_add_white_24dp"
+                    android:background="@drawable/circle"
+                    android:id="@+id/fabButton"
+                    android:layout_gravity="right|bottom" />
+        </FrameLayout>
+
     </LinearLayout>
 
 
