--- a/DueNow/app/src/main/res/layout/dummy.xml
+++ b/DueNow/app/src/main/res/layout/dummy.xml
@@ -4,53 +4,6 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/menuToolbar"
-            android:background="@color/colorPrimaryGreen"
-            android:layout_width="match_parent"
-            android:layout_height="190dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/profile_image"
-                    android:layout_marginTop="56dp"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:src="@mipmap/ic_launcher" />
-
-                <TextView
-                    android:id="@+id/username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Full Name"
-                    android:textSize="@dimen/body2"
-                    android:textColor="@color/white"
-                    android:padding="5dp"/>
-
-                <TextView
-                    android:id="@+id/email"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:textSize="@dimen/body1"
-                    android:textColor="@color/white"
-                    android:paddingLeft="5dp"
-                    android:paddingBottom="5dp"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.Toolbar>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -58,7 +11,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/activity_vertical_margin"
+                android:padding="@dimen/headerMargin"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="@dimen/icon_size"
@@ -71,93 +24,98 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_vertical_margin"
                     android:textColor="#000000"
-                    android:textSize="@dimen/subheading4"
+                    android:textSize="@dimen/subheading2"
                     android:text="Tasks"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/double_margin"
+                android:paddingLeft="@dimen/headerMargin"
+                android:paddingRight="@dimen/headerMargin"
+                android:paddingBottom="@dimen/headerMargin"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="@dimen/icon_size2"
-                    android:layout_height="@dimen/icon_size2"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
                     android:gravity="center"
                     android:src="@mipmap/ic_watch_later_black_24dp"
-                    android:padding="@dimen/activity_vertical_margin"/>
+                    android:padding="@dimen/headerMargin"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_vertical_margin"
                     android:textColor="#000000"
-                    android:textSize="@dimen/subheading4"
+                    android:textSize="@dimen/subheading2"
                     android:text="Postponed Tasks"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/double_margin"
+                android:paddingLeft="@dimen/headerMargin"
+                android:paddingRight="@dimen/headerMargin"
+                android:paddingBottom="@dimen/headerMargin"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="@dimen/icon_size2"
-                    android:layout_height="@dimen/icon_size2"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
                     android:gravity="center"
                     android:src="@mipmap/ic_check_black_24dp"
-                    android:padding="@dimen/activity_vertical_margin"/>
+                    android:padding="@dimen/headerMargin"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_vertical_margin"
                     android:textColor="#000000"
-                    android:textSize="@dimen/subheading4"
+                    android:textSize="@dimen/subheading2"
                     android:text="Finished Tasks"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/double_margin"
+                android:paddingLeft="@dimen/headerMargin"
+                android:paddingRight="@dimen/headerMargin"
+                android:paddingBottom="@dimen/headerMargin"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="@dimen/icon_size2"
-                    android:layout_height="@dimen/icon_size2"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
                     android:gravity="center"
                     android:src="@mipmap/ic_account_box_black_24dp"
-                    android:padding="@dimen/activity_vertical_margin"/>
+                    android:padding="@dimen/headerMargin"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_vertical_margin"
                     android:textColor="#000000"
-                    android:textSize="@dimen/subheading4"
+                    android:textSize="@dimen/subheading2"
                     android:text="Account Settings"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/double_margin"
+                android:paddingLeft="@dimen/headerMargin"
+                android:paddingRight="@dimen/headerMargin"
+                android:paddingBottom="@dimen/headerMargin"
                 android:orientation="horizontal">
                 <ImageView
-                    android:layout_width="@dimen/icon_size2"
-                    android:layout_height="@dimen/icon_size2"
+                    android:layout_width="@dimen/icon_size"
+                    android:layout_height="@dimen/icon_size"
                     android:gravity="center"
                     android:src="@mipmap/ic_exit_to_app_black_24dp"
-                    android:padding="@dimen/activity_vertical_margin"/>
+                    android:padding="@dimen/headerMargin"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/activity_vertical_margin"
                     android:textColor="#000000"
-                    android:textSize="@dimen/subheading4"
+                    android:textSize="@dimen/subheading2"
                     android:text="Logout"/>
             </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
-
 
 </LinearLayout>
