--- a/DueNow/app/src/main/res/layout/menu_list_item.xml
+++ b/DueNow/app/src/main/res/layout/menu_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/activity_vertical_margin"
-        android:textColor="#000000"
+        android:textColor="@color/black"
         android:textSize="@dimen/subheading4"/>
 
 </LinearLayout>
