--- a/DueNow/app/src/main/res/layout/layout_new_task.xml
+++ b/DueNow/app/src/main/res/layout/layout_new_task.xml
@@ -61,12 +61,14 @@
         </LinearLayout>
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:layout_weight="1"
             android:orientation="vertical">
             <LinearLayout
+                android:id="@+id/task_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/activity_vertical_margin"
@@ -104,6 +106,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/due_date"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -140,6 +143,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/priority_click"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -176,6 +180,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/difficulty_level"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
