--- a/DueNow/app/src/main/res/values/colors.xml
+++ b/DueNow/app/src/main/res/values/colors.xml
@@ -10,6 +10,10 @@
     <color name="black">#000000</color>
     <color name="grey">#E0E0E0</color>
     <color name="lightBlue">#64B5F6</color>
+	
+	<!--colors for the date picker-->
+	<color name="mdtp_accent_color">#4CAF50</color>
+	<color name="mdtp_accent_color_dark">#388E3C</color>
 
 
 
