--- a/DueNow/app/src/main/res/layout/activity_login.xml
+++ b/DueNow/app/src/main/res/layout/activity_login.xml
@@ -6,11 +6,10 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/login_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingRight="40dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/login_bg"/>
+        android:scaleType="centerCrop"/>
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
