--- a/DueNow/app/src/main/res/layout/dropdown_item.xml
+++ b/DueNow/app/src/main/res/layout/dropdown_item.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</TextView>
+    <TextView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="@dimen/subheading4"
+        android:padding="2dp"
+        android:color="@color/textGrey">
+    </TextView>
