--- a/DueNow/app/src/main/res/values/colors.xml
+++ b/DueNow/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#E0E0E0</color>
+    <color name="textGrey">#9E9E9E</color>
     <color name="lightBlue">#64B5F6</color>
 	
 	<!--colors for the date picker-->
