--- a/DueNow/app/src/main/res/layout/layout_new_task.xml
+++ b/DueNow/app/src/main/res/layout/layout_new_task.xml
@@ -84,14 +84,6 @@
 
             </LinearLayout>
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="testSave"
-                android:id="@+id/testSave" />
-
-
         </LinearLayout>
 
 
@@ -243,17 +235,12 @@
                         android:textColor="#000000"
                         android:textSize="@dimen/subheading4"
                         android:text="Difficulty"/>
-                    <!--<TextView-->
-                        <!--android:layout_width="match_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:textSize="@dimen/subheading4"-->
-                        <!--android:id="@+id/difficulty" />-->
-
-                    <Spinner
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/subheading4"
                         android:id="@+id/difficulty" />
+
                 </LinearLayout>
 
         </LinearLayout>
