--- a/DueNow/app/src/main/res/layout/layout_new_task.xml
+++ b/DueNow/app/src/main/res/layout/layout_new_task.xml
@@ -25,7 +25,7 @@
                 android:id="@+id/appTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="New Tasks"
+                android:text="Homework"
                 android:textSize="@dimen/headline"
                 android:layout_marginLeft="@dimen/icon_size2"
                 android:textColor="#FFFFFF" />
@@ -90,7 +90,6 @@
 
 
         <LinearLayout
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
