--- a/DueNow/app/src/main/res/layout/activity_view_task.xml
+++ b/DueNow/app/src/main/res/layout/activity_view_task.xml
@@ -65,7 +65,7 @@
                 android:layout_marginLeft="@dimen/icon_size"
                 android:paddingBottom="16dp"
                 android:textColor="@color/white" />
-            </LinearLayout>
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -85,7 +85,7 @@
                         android:layout_width="@dimen/icon_size2"
                         android:layout_height="@dimen/icon_size2"
                         android:gravity="center"
-                        android:src="@mipmap/ic_label_black_24dp"/> <!--change to desc icon-->
+                        android:src="@mipmap/ic_description_black_24dp"/> <!--change to desc icon-->
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -113,17 +113,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="@dimen/activity_vertical_margin">
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:paddingRight="@dimen/activity_vertical_margin"
+                    android:paddingBottom="@dimen/activity_vertical_margin">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:padding="@dimen/activity_vertical_margin">
+                        android:padding="@dimen/activity_vertical_margin"
+
+                        >
                         <ImageView
                             android:layout_width="@dimen/icon_size2"
                             android:layout_height="@dimen/icon_size2"
                             android:gravity="center"
-                            android:src="@mipmap/ic_schedule_black_24dp"/>
+                            android:src="@mipmap/ic_schedule_black_24dp"
+                            />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -151,7 +156,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:padding="@dimen/activity_vertical_margin">
+                    android:paddingLeft="@dimen/activity_vertical_margin"
+                    android:paddingRight="@dimen/activity_vertical_margin"
+                    android:paddingBottom="@dimen/activity_vertical_margin">
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -161,7 +168,7 @@
                             android:layout_width="@dimen/icon_size2"
                             android:layout_height="@dimen/icon_size2"
                             android:gravity="center"
-                            android:src="@mipmap/ic_schedule_black_24dp"/> <!--change this-->
+                            android:src="@mipmap/ic_timer_black_24dp"/> <!--change this-->
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -188,7 +195,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
                 android:orientation="horizontal">
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -229,7 +238,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="@dimen/activity_vertical_margin">
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -268,7 +279,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="@dimen/activity_vertical_margin">
+                android:paddingLeft="@dimen/activity_vertical_margin"
+                android:paddingRight="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin">
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -303,6 +316,7 @@
                 </LinearLayout>
 
             </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 
